fixed button overlapping the nav bar
added css to change the position of the button
ran into an issue where 2 buttons began appearing but i deleted one

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,6 +4,8 @@ body {
 
 .sidenavDisplayer{
   position: fixed;
+  top:30px;
+  left:220px;
 }
 
 .sidenav {
